Adjusting memory options for JDK 11 and entrypoint script